apps/usenet/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: usenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: ghcr.io/linuxserver/overseerr:v1.33.2-ls113
          ports:
            - containerPort: 5055
          volumeMounts:
            - mountPath: /config
              name: data
          startupProbe:
            tcpSocket:
              port: 5055
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 5055
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: overseerr-data
