apps/usenet/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: usenet
spec:
  ports:
    - port: 5055
      targetPort: 5055
  selector:
    app: overseerr
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
