apps/usenet/overseerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  namespace: usenet
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
  hostnames:
    - overseerr.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: overseerr
          port: 5055
